upgrade node version in buildpack

--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -4,3 +4,6 @@ elixir_version=1.12
 # Erlang version
 # https://github.com/HashNuke/heroku-buildpack-elixir-otp-builds/blob/master/otp-versions
 erlang_version=23.0.3
+
+# Node version
+node_version=10.20.1
