--- a/assets/package.json
+++ b/assets/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "brunch": "^4.0.0",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix_live_view": "file:../deps/phoenix_live_view"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
